<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0001FC"
    tools:context=".SignUpActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>
    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"

        android:textStyle="bold"
        android:text="@string/create_an_account"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/line1" />

    <TextView
        android:id="@+id/fullNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textStyle="bold"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginHorizontal="60dp"
        android:text="@string/full_name"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        app:layout_constraintBottom_toTopOf="@+id/fullName"/>

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/full_name"
        android:layout_marginHorizontal="60dp"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameLabel"
        app:layout_constraintBottom_toTopOf="@+id/emailLabel"/>

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="60dp"
        android:fontWeight="600"
        android:text="@string/email"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        app:layout_constraintBottom_toTopOf="@+id/email"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:background="@drawable/custom_edittext"
        android:layout_marginHorizontal="60dp"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel"
        app:layout_constraintBottom_toTopOf="@+id/passwordLabel"/>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="60dp"
        android:fontWeight="600"
        android:text="@string/password"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintBottom_toTopOf="@+id/password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:background="@drawable/custom_edittext"
        android:layout_marginHorizontal="60dp"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
        app:layout_constraintBottom_toTopOf="@+id/buttonValidate"/>

    <Button
        android:id="@+id/buttonValidate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="50dp"
        android:background="@drawable/button_border"
        android:shadowColor="#E00135EB"
        android:shadowDx="0"
        android:shadowDy="16"
        android:shadowRadius="40"
        android:text="@string/validate"
        android:textAllCaps="false"
        android:textColor="#0001FC"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/line2"/>

    <LinearLayout
        android:id="@+id/loginRedirect"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/line2"
        app:layout_constraintBottom_toTopOf="@+id/line3">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/question"
            android:textColor="#FBDF00"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/redirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:linksClickable="true"
            android:shadowColor="#FFFFFF"
            android:shadowDx="0"
            android:shadowDy="2"
            android:shadowRadius="80"
            android:text="@string/redirect"
            android:textColor="#FBDF00"
            android:textSize="18sp"
            android:onClick="login"/>
    </LinearLayout>

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:shadowColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="80"
        android:text="@string/skip"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>